# python-gears

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/workflow/: ci-test.yml
.github/workflows/: ci-test.yml
examples/rbac_examples/: basic_rbac.py
gears/: __about__.py  confi.py  factory.py  rbac.py  singleton_meta.py  token_args.py
hacks/: bump-version.sh
resources/: dev-requirements.txt
tests/: test_confi.py  test_factory.py  test_rbac.py  test_singleton.py  test_token_args.py
